@@ -1,4 +1,6 @@
 0.24.x
+    Fixed #791 - You should now be able to create and find a user/group in one transaction.
+
     Fixed #1610 - Raise "Filebucketed" messages to Notice priority
 
     Added a number of confines to package providers
